[metadata]
name = pdl2pdf
version = attr: pdl2pdf.__version__
description = A command-line tool to convert a print job to PDF using Ghostscript/GhostPCL
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = print, PDL, PCL, PostScript, PDF, convert
license = GNU Affero General Public License v3 or later (AGPLv3+)
url = https://github.com/vashek/pdl2pdf
author = Vaclav Dvorak
author_email = vaclav.dvorak@ysoft.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Printing

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    click
    cx_freeze
setup_requires =
    pytest-runner
    pytest-pylint
tests_require =
    pytest
    pylint
scripts =
    pdl2pdf.py

[options.package_data]
pdl2pdf = py.typed

[aliases]
test=pytest

[tool:pytest]
addopts = --pylint --doctest-modules --mypy
